TestSuite/errors/err0308.pas
begin
  var x := new class(p := nil);
end.